// SPDX-FileCopyrightText: 2023 Shun Sakai
//
// SPDX-License-Identifier: Apache-2.0 OR MIT

= Changelog
:toc: preamble
:project-url: https://github.com/sorairolake/sysexits-zig
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/v0.2.7\...HEAD[Unreleased]

=== Changed

* Migrate to Zig version 0.13.0 ({pull-request-url}/5[#5])

== {compare-url}/v0.2.6\...v0.2.7[0.2.7] - 2024-05-05

=== Changed

* Add links to doc comments ({pull-request-url}/1[#1])

== {compare-url}/v0.2.5\...v0.2.6[0.2.6] - 2024-05-04

=== Changed

* Migrate to Zig version 0.12.0

== {compare-url}/v0.2.4\...v0.2.5[0.2.5] - 2024-01-19

=== Fixed

* Fix broken link in `README.md`

== {compare-url}/v0.2.3\...v0.2.4[0.2.4] - 2024-01-18

=== Changed

* Change copyright notice in `LICENSES/MIT.txt`

== {compare-url}/v0.2.2\...v0.2.3[0.2.3] - 2024-01-06

=== Changed

* Change to use `bump-my-version`

== {compare-url}/v0.2.1\...v0.2.2[0.2.2] - 2023-11-30

=== Removed

* Remove DEP5 file

== {compare-url}/v0.2.0\...v0.2.1[0.2.1] - 2023-11-04

=== Added

* Add Code of Conduct

=== Removed

* Remove `gyro.zzz` and `zigmod.yml`

== {compare-url}/v0.1.2\...v0.2.0[0.2.0] - 2023-09-14

=== Changed

* Remove unnecessary newline after period
* Migrate to Zig version 0.11.0

== {compare-url}/v0.1.1\...v0.1.2[0.1.2] - 2023-08-01

=== Changed

* Change the comment header to the format recommended by the REUSE Specification
* Make this project REUSE compliant

== {compare-url}/v0.1.0\...v0.1.1[0.1.1] - 2023-06-09

=== Added

* Add gyro and zigmod support

=== Changed

* Change behavior of `example/isutf8.zig`

== {project-url}/releases/tag/v0.1.0[0.1.0] - 2023-05-19

=== Added

* Initial release